tests/baselines/reference/recursiveTypeIdentity.errors.txt
==== tests/cases/compiler/recursiveTypeIdentity.ts (1 errors) ====
    interface A {
        <T extends A>(x: T): void;
    }
    
    interface B {
        <T extends B>(x: T): void;
    }
    
    interface C {
        (x: A): void;
        (x: B): void;
        ~~~~~~~~~~~~
!!! error TS2146: Duplicate overload call signature.
    }